--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -326,6 +326,55 @@
     <string name="permission_location">Location access needed for Blue Force Tracking</string>
     <string name="permission_notifications">Notification access needed for incoming calls</string>
 
+    <!-- Settings: Calls (Core-Telecom) -->
+    <string name="settings_section_calls">Calls</string>
+    <string name="settings_vibrate_on_call">Vibrate on Incoming Call</string>
+    <string name="settings_vibrate_on_call_desc">Vibrate when a call is received</string>
+    <string name="settings_auto_accept">Auto-Accept Calls</string>
+    <string name="settings_auto_accept_desc">Automatically accept from trusted contacts</string>
+    <string name="settings_telecom_integration">Telecom Integration</string>
+    <string name="settings_telecom_integration_value">Core-Telecom (CallsManager)</string>
+    <string name="settings_audio_routing_telecom">Audio Routing</string>
+    <string name="settings_audio_routing_telecom_value">Earpiece / Speaker / Bluetooth</string>
+    <string name="settings_bluetooth_audio">Bluetooth Audio</string>
+    <string name="settings_bluetooth_audio_value">Supported via Telecom endpoints</string>
+    <string name="settings_incoming_notification">Incoming Call Notification</string>
+    <string name="settings_incoming_notification_value">CallStyle (Full-Screen Intent)</string>
+    <string name="settings_ongoing_notification">Ongoing Call Notification</string>
+    <string name="settings_ongoing_notification_value">Persistent (Non-dismissible)</string>
+
+    <!-- Settings: PTT Advanced -->
+    <string name="settings_ptt_transport">PTT Transport</string>
+    <string name="settings_ptt_transport_value">Multicast RTP (RFC 3550)</string>
+    <string name="settings_ptt_codec">PTT Codec</string>
+    <string name="settings_ptt_codec_value">Opus 6-24 kbps (RFC 7587)</string>
+    <string name="settings_ptt_qos">QoS Marking</string>
+    <string name="settings_ptt_qos_value">DSCP EF (46) - Expedited Forwarding</string>
+    <string name="settings_ptt_jitter_buffer">Jitter Buffer</string>
+    <string name="settings_ptt_jitter_buffer_value">Adaptive 20-100ms (RFC 3550)</string>
+    <string name="settings_ptt_floor_control">Floor Control</string>
+    <string name="settings_ptt_floor_control_value">3GPP MCPTT (TS 24.380)</string>
+    <string name="settings_ptt_multicast_group">Multicast Group</string>
+    <string name="settings_ptt_multicast_group_value">239.255.0.x:5004</string>
+    <string name="settings_ptt_m2e_latency">Mouth-to-Ear Latency</string>
+    <string name="settings_ptt_m2e_latency_value">&lt; 300ms target</string>
+
+    <!-- ATAK Plugin -->
+    <string name="atak_plugin_name">MeshRider Wave ATAK Plugin</string>
+    <string name="atak_cot_dispatching">CoT Dispatching</string>
+    <string name="atak_cot_dispatching_value">CotMapComponent (Internal + External)</string>
+    <string name="atak_bft_markers">BFT Markers</string>
+    <string name="atak_bft_markers_value">Real-time team positions on ATAK map</string>
+
+    <!-- Floor Control States -->
+    <string name="floor_idle">Idle</string>
+    <string name="floor_requesting">Requesting floor…</string>
+    <string name="floor_granted">Floor granted - Speak now</string>
+    <string name="floor_denied">Floor denied</string>
+    <string name="floor_queued">Queued - Waiting for floor</string>
+    <string name="floor_preempted">Preempted by higher priority</string>
+    <string name="floor_releasing">Releasing floor…</string>
+
     <!-- Content Descriptions (Accessibility) -->
     <string name="cd_back">Navigate back</string>
     <string name="cd_settings">Open settings</string>
