feat: UX improvements, bug fixes, and production-ready PTT system
## UX Enhancements
- Add primary action cards to Home screen (PTT, Call Team, SOS, Map)
- Add snackbar feedback for all settings toggles
- Improve visual feedback with haptic and vibration responses
- Unify color system across all screens (PremiumColors)
- Fix WCAG AA contrast compliance for accessibility

## Critical Bug Fixes
- Fix Mutex.withLock suspend function issues in MeshService/MeshNetworkManager
- Replace kotlinx.coroutines.sync.atomic with java.util.concurrent.atomic.AtomicInteger
- Fix WebRTC ContinualGatheringPolicy compatibility
- Add missing logW imports for proper logging
- Fix CallActionReceiver import in CallActivity
- Add border modifier import to HomeScreen

## PTT System (Production-Ready)
- Implement native Oboe audio engine with Opus codec
- Add DSCP QoS marking (EF 46) for PTT voice priority
- Implement 3GPP MCPTT floor control protocol
- Add Samsung XCover hardware PTT button support
- Configure Samsung DeX and Multi Window support

## Build Configuration
- Update BuildConfig usage for version info
- Fix CMakeLists.txt for native builds
- Configure NDK 27.0.11902837
- Add libopus v1.5.2 via FetchContent

## Testing
- Update instrumented tests for PTT service
- Fix floor control unit tests
- Add crypto manager tests for broadcast encryption

## Security
- Implement MLS-style broadcast encryption with shared channel keys
- Add context binding to channel key derivation
- Use XSalsa20-Poly1305 AEAD for multicast PTT audio

## Documentation
- Add comprehensive research docs (MANET, WebRTC, 3GPP MCPTT)
- Add Samsung tactical device research
- Add military standards compliance research
- Add market analysis and business model research

Co-Authored-By: Jabbir Basha P <jabbir@doodlelabs.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -326,6 +326,10 @@
     <string name="permission_location">Location access needed for Blue Force Tracking</string>
     <string name="permission_notifications">Notification access needed for incoming calls</string>
 
+    <!-- PTT Button Permission (Signature-level) -->
+    <string name="ptt_button_permission_label">PTT Button Control</string>
+    <string name="ptt_button_permission_desc">Allows the app to receive PTT button events from hardware buttons. Only apps signed by Doodle Labs can use this permission.</string>
+
     <!-- Settings: Calls (Core-Telecom) -->
     <string name="settings_section_calls">Calls</string>
     <string name="settings_vibrate_on_call">Vibrate on Incoming Call</string>
